# kineto

./: README.md  build-cu.sh  build.sh
libkineto/sample_programs/: kineto_cupti_profiler.cpp  kineto_playground.cpp
libkineto/test/: CMakeLists.txt  MockActivitySubProfiler.h
